--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Reflex test</title>
 </head>
 <body>
-    <span id="point-tag">0</span>
+    <span id="point-tag">punti: <span id="pt">0</span></span>
+
+    <button id="start-btn">start</button>
 </body>
 </html>
